add_subdirectory(cnn)
add_subdirectory(lu)
add_subdirectory(mm_float)
add_subdirectory(mm_int8)
add_subdirectory(mm_int16)
add_subdirectory(mm_hbm)

add_subdirectory(mm_float_large)
add_subdirectory(mm_int8_large)
add_subdirectory(mm_int16_large)
add_subdirectory(mttkrp_large)
add_subdirectory(ttm_large)
add_subdirectory(ttmc_large)